# napari-boxmanager

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  changes.txt  conda_env.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: changes.rst  conf.py  index.rst  requirements.txt
docs/manual/: general.rst  manual.rst  read.rst  write.rst
reader_backup/: tlpkl.py  to_napari_backup.txt
reader_backup/_tests/: test_interface.py
src/box_manager/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/box_manager/_qt/: AddLayer.py  FilterImage.py  OrganizeBox.py  OrganizeLayer.py  SelectMetric.py
test_data/: 2d_0.mrc  2d_0_center.box  2d_corrupt_unqual_columns.box  2d_particles.cbox  3d.mrc  3d.mrci  3d_particle.cbox  valid.tloc
test_data/box_data/: create_data.py  test_0.mrc  test_0_centered.box  test_0_new.box  test_1.mrc  test_1_centered.box  test_2.mrc  test_2_centered.box  test_2_new.box  test_3.box  test_3.mrc  test_4.box  test_4.mrc  test_4_new.box  test_5.box  test_5.mrc  test_6.box  test_6.mrc  test_6_centered.box  test_7.mrc  test_7_new.box  test_8.box  test_8.mrc  test_8_centered.box  test_9.box  test_9.mrc  test_9_new.box
test_data/cbox3d/: particles.cbox
test_data/filament_cbox_2d/: ActLifeact_02885.cbox  ActLifeact_03047.cbox  ActLifeact_03070.cbox  ActLifeact_03211.cbox  ActLifeact_04203.cbox
test_data/particle_cbox_2d/: TcdA1-0018_frames_sum.cbox  TcdA1-0019_frames_sum.cbox
test_data/valid_box/: 2d.box  2d_0.box
test_data/valid_mrc/: 2d.mrc  2d_0.mrc
(+46 files in other folders)
