[metadata]
name = napari_boxmanager
description = Particle selection tool for cryo-em
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus Stabrin
author_email = markus.stabrin@mpi-dortmund.mpg.de
license = MPL-2.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    matplotlib
    mrcfile
    napari-matplotlib
    numpy
    pandas
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-boxmanager = box_manager:napari.yaml

[options.extras_require]
testing =
    mrcfile
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
